Fix z-index again and again

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,4 +1,4 @@
 .swal2-container {
   position: absolute;
-  z-index: 99999;
+  z-index: 10000000 !important;
 }
